Qkera wins 2024 Falling Walls Award
November 8, 2024
Qkera a start up originating from our Chair was honored as one of the top 25 science start-ups worldwide at the 2024 Falling Walls Science Summit, selected from over 1,100 global contenders. The award was given for its stride to develop innovative solid-state battery electrolytes, achieving higher energy densities and enhanced stability at reduced production costs. Congrats to Andi, Lea, Steffen and Jennifer!

Fuzhan Wins ZEISS Women Award 2024 in Digital Research
October 21, 2024
We are thrilled to announce that Fuzhan has been awarded the prestigious ZEISS Women Award 2024 in the Digital Research category. This award recognizes her outstanding contributions to the fields of data science and digitalization of materials science labs, where her innovative research is making a significant impact. Fuzhan's work is pushing the boundaries of digital technology, demonstrating excellence in both academic and practical applications. Her achievements are not only advancing the field but also inspiring future generations of researchers and innovators. The award was presented by Georg v. Erffa, Head of Corporate Human Resources at ZEISS, in a ceremony that celebrated the vision and leadership of female pioneers in Digital & IT. 
Our warmest congratulations to Fuzhan for this well-deserved recognition!
<small><img src="fuzhan.png" class="" style="width: 400px;"></small>

Prof. Rupp Appointed Max Planck Fellow at the Fritz Haber Institute  
September 11, 2024  
Prof. Rupp has been appointed as a Max Planck Fellow for the next 5 years at the <a href="https://www.fhi.mpg.de" target="_blank">Fritz Haber Institute in Berlin</a>. This honorary title will further strengthen ties with the Max Planck Society, officially making Prof. Rupp a member of the institution.

Prof. Rupp Elected Vice President of the International Society for Solid State Ionics (ISSI)  
August 15, 2024  