@@ -207,6 +207,16 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
 <!-- START NEWS BAR -->
 <div class="container-fluid p-0 news-bar text-white">
     <div class="row p-0 m-0">
@@ -214,19 +224,19 @@
             <div class="ecm-primary font-weight-bold text-center align-middle"> NEWS </div>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Qkera wins 2024 Falling Walls Award </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Prof. Rupp Plays a Key Role in the World's First Center for Solar Batteries</strong><br> </a>
+            <br>
+            <small class="ecm-primary font-italic"> November 27, 2024 </small>
+        </div>
+        <div class="col-sm p-1 bg-dark">
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Qkera wins 2024 Falling Walls Award </a>
             <br>
             <small class="ecm-primary font-italic"> November 8, 2024 </small>
         </div>
-        <div class="col-sm p-1 bg-dark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Fuzhan Wins ZEISS Women Award 2024 in Digital Research </a>
+        <div class="col-sm p-1 bg-lessdark">
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Fuzhan Wins ZEISS Women Award 2024 in Digital Research </a>
             <br>
             <small class="ecm-primary font-italic"> October 21, 2024 </small>
-        </div>
-        <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Prof. Rupp Appointed Max Planck Fellow at the Fritz Haber Institute </a>
-            <br>
-            <small class="ecm-primary font-italic"> September 11, 2024 </small>
         </div>
     </div>
 </div>
