@@ -101,6 +101,17 @@
 
 <tr><td>
     <a class="anchor" id="news1"></a>
+    <h6 class="mb-1">Prof. Rupp Plays a Key Role in the World's First Center for Solar Batteries</strong><br> </h6> 
+    <div class='font-weight-light'>November 27, 2024</div>
+    <p><small>The Technical University of Munich (TUM) and the Max Planck Society (MPG), with support from the Bavarian Ministry of Economic Affairs, have announced the establishment of the world's first Center for Solar Batteries. This immense initiative aims to develop innovative energy storage solutions by integrating solar cells and batteries into a single component, enabling direct chemical storage of solar energy. The center will be led by Prof. Jennifer L.M. Rupp, Prof. Karsten Reuter, and Prof. Bettina V. Lotsch. For more information, please visit the official announcements:</small></p>
+<p><small>- <a href="https://www.tum.de/en/news-and-events/all-news/press-releases/details/worlds-first-center-for-solar-batteries" target="_blank">World's First Center for Solar Batteries</a></small></p>
+<p><small>- <a href="https://www.nat.tum.de/en/nat/latest/article/worlds-first-center-for-solar-batteries/" target="_blank">Strategic partnership on optoionics between TUM and Max Planck Society</a></small></p>
+<p><small><small><img src="solar_bat.png" class="" style="width: 400px;"></small></small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news2"></a>
     <h6 class="mb-1">Qkera wins 2024 Falling Walls Award </h6> 
     <div class='font-weight-light'>November 8, 2024</div>
     <p><small>Qkera a start up originating from our Chair was honored as one of the top 25 science start-ups worldwide at the 2024 Falling Walls Science Summit, selected from over 1,100 global contenders. The award was given for its stride to develop innovative solid-state battery electrolytes, achieving higher energy densities and enhanced stability at reduced production costs. Congrats to Andi, Lea, Steffen and Jennifer!</small></p>
@@ -108,7 +119,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    <a class="anchor" id="news3"></a>
     <h6 class="mb-1">Fuzhan Wins ZEISS Women Award 2024 in Digital Research </h6> 
     <div class='font-weight-light'>October 21, 2024</div>
     <p><small>We are thrilled to announce that Fuzhan has been awarded the prestigious ZEISS Women Award 2024 in the Digital Research category. This award recognizes her outstanding contributions to the fields of data science and digitalization of materials science labs, where her innovative research is making a significant impact. Fuzhan's work is pushing the boundaries of digital technology, demonstrating excellence in both academic and practical applications. Her achievements are not only advancing the field but also inspiring future generations of researchers and innovators. The award was presented by Georg v. Erffa, Head of Corporate Human Resources at ZEISS, in a ceremony that celebrated the vision and leadership of female pioneers in Digital & IT.</small></p>
@@ -118,7 +129,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Prof. Rupp Appointed Max Planck Fellow at the Fritz Haber Institute </h6> 
     <div class='font-weight-light'>September 11, 2024</div>
     <p><small>Prof. Rupp has been appointed as a Max Planck Fellow for the next 5 years at the <a href="https://www.fhi.mpg.de" target="_blank">Fritz Haber Institute in Berlin</a>. This honorary title will further strengthen ties with the Max Planck Society, officially making Prof. Rupp a member of the institution.</small></p>
