@@ -1,3 +1,10 @@
+Prof. Rupp Plays a Key Role in the World's First Center for Solar Batteries</strong><br>
+November 27, 2024
+The Technical University of Munich (TUM) and the Max Planck Society (MPG), with support from the Bavarian Ministry of Economic Affairs, have announced the establishment of the world's first Center for Solar Batteries. This immense initiative aims to develop innovative energy storage solutions by integrating solar cells and batteries into a single component, enabling direct chemical storage of solar energy. The center will be led by Prof. Jennifer L.M. Rupp, Prof. Karsten Reuter, and Prof. Bettina V. Lotsch. For more information, please visit the official announcements:
+- <a href="https://www.tum.de/en/news-and-events/all-news/press-releases/details/worlds-first-center-for-solar-batteries" target="_blank">World's First Center for Solar Batteries</a>
+- <a href="https://www.nat.tum.de/en/nat/latest/article/worlds-first-center-for-solar-batteries/" target="_blank">Strategic partnership on optoionics between TUM and Max Planck Society</a>
+<small><img src="solar_bat.png" class="" style="width: 400px;"></small>
+
 Qkera wins 2024 Falling Walls Award
 November 8, 2024
 Qkera a start up originating from our Chair was honored as one of the top 25 science start-ups worldwide at the 2024 Falling Walls Science Summit, selected from over 1,100 global contenders. The award was given for its stride to develop innovative solid-state battery electrolytes, achieving higher energy densities and enhanced stability at reduced production costs. Congrats to Andi, Lea, Steffen and Jennifer!
